# hyprland-protocols

./: README.md  flake.nix  hyprland-protocols.pc.in  meson.build  meson.build.orig
nix/: default.nix
protocols/: hyprland-ctm-control-v1.xml  hyprland-ctm-control.xml  hyprland-focus-grab-v1.xml  hyprland-global-shortcuts-v1.xml  hyprland-input-capture-v1.xml  hyprland-toplevel-export-v1.xml  hyprland-toplevel-mapping-v1.xml
